// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#useTime should respect prop updates 1`] = `
Object {
  "current": 0,
}
`;

exports[`#useTime should respect prop updates 2`] = `
Object {
  "current": 1,
}
`;

exports[`#useTime should respect prop updates 3`] = `
Object {
  "current": 2,
}
`;

exports[`#useTime should respect prop updates 4`] = `
Object {
  "current": 0,
}
`;

exports[`#useTime should respect prop updates 5`] = `
Object {
  "current": 300,
}
`;

exports[`#useTime should throw if context is not found 1`] = `"Warning! TimeSync cannot be found. Did you add <TimeProvider /> at the top of your component hierarchy?"`;
